tests/lean/689.lean.expected.out
689.lean:2:14-4:7: error: unexpected token 'section'; expected '|'
